# capstone4_arief

./: Dockerfile  README.md  pyproject.toml
src/cons_yolo/: main.py
training_code/: Train_YOLOv12_Construction.ipynb
